[gd_scene load_steps=46 format=3 uid="uid://dmcsbn3rtjj7a"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_0tt3j"]
[ext_resource type="Texture2D" uid="uid://c3pmmr16rafep" path="res://assets/gdm_banner.jpg" id="2_sxuom"]
[ext_resource type="FontFile" uid="uid://dmccec4vuw4b5" path="res://fonts/PixelGame-R9AZe.otf" id="3_ae5ks"]
[ext_resource type="Script" path="res://rich_text_label.gd" id="4_cv8n6"]
[ext_resource type="AudioStream" uid="uid://c13s7orjtti3f" path="res://sounds/button.wav" id="5_3grud"]
[ext_resource type="AudioStream" uid="uid://4qoecn28xj2e" path="res://sounds/title_music.mp3" id="6_648rk"]
[ext_resource type="Texture2D" uid="uid://uhe3cc3nt6we" path="res://art/info.png" id="7_u3jb2"]
[ext_resource type="Texture2D" uid="uid://wq2cei1ub5vq" path="res://art/power_ups/immunity.png" id="9_rrfyv"]
[ext_resource type="Texture2D" uid="uid://3m27dkm5ep2t" path="res://art/power_ups/magnet.png" id="10_eeoqu"]
[ext_resource type="Texture2D" uid="uid://ds52q2f7jsyed" path="res://art/power_ups/slowballs.png" id="11_44acw"]
[ext_resource type="Texture2D" uid="uid://cdnfeqju8k2xn" path="res://art/power_ups/x2points.png" id="12_h28ys"]

[sub_resource type="Theme" id="Theme_ypn7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e2vqv"]

[sub_resource type="Theme" id="Theme_3pqgu"]
default_font = ExtResource("3_ae5ks")
default_font_size = 50
Button/fonts/font = ExtResource("3_ae5ks")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yi83n"]

[sub_resource type="Theme" id="Theme_1je8c"]
default_font = ExtResource("3_ae5ks")
default_font_size = 90

[sub_resource type="Theme" id="Theme_pljgd"]
default_font = ExtResource("3_ae5ks")
default_font_size = 40

[sub_resource type="AtlasTexture" id="AtlasTexture_7b7g3"]
atlas = ExtResource("9_rrfyv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnhar"]
atlas = ExtResource("9_rrfyv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r8fx"]
atlas = ExtResource("9_rrfyv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5d3u"]
atlas = ExtResource("9_rrfyv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vmct"]
atlas = ExtResource("9_rrfyv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vja8o"]
atlas = ExtResource("9_rrfyv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_agabk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b7g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnhar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r8fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5d3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vmct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vja8o")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kj1s7"]
atlas = ExtResource("10_eeoqu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk3fi"]
atlas = ExtResource("10_eeoqu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh2u6"]
atlas = ExtResource("10_eeoqu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu4k3"]
atlas = ExtResource("10_eeoqu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ogu"]
atlas = ExtResource("10_eeoqu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlvb"]
atlas = ExtResource("10_eeoqu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0kk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj1s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk3fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh2u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu4k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ogu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlvb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_52cgr"]
atlas = ExtResource("11_44acw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmj7v"]
atlas = ExtResource("11_44acw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1tml"]
atlas = ExtResource("11_44acw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwgqq"]
atlas = ExtResource("11_44acw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyio"]
atlas = ExtResource("11_44acw")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcc6s"]
atlas = ExtResource("11_44acw")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbc4f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52cgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmj7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1tml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwgqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcc6s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b78da"]
atlas = ExtResource("12_h28ys")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ycck"]
atlas = ExtResource("12_h28ys")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgnhp"]
atlas = ExtResource("12_h28ys")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6le2"]
atlas = ExtResource("12_h28ys")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpbhp"]
atlas = ExtResource("12_h28ys")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnluf"]
atlas = ExtResource("12_h28ys")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyn88"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b78da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ycck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgnhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6le2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpbhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnluf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tt3j")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_3grud")

[node name="background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.643137)
layout_mode = 0
offset_left = -658.0
offset_top = -437.0
offset_right = 708.0
offset_bottom = 460.0
texture = ExtResource("2_sxuom")

[node name="game_title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -390.0
offset_top = -325.0
offset_right = 393.0
offset_bottom = 164.0
grow_vertical = 2
theme = SubResource("Theme_ypn7n")
theme_override_fonts/normal_font = ExtResource("3_ae5ks")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
script = ExtResource("4_cv8n6")

[node name="info_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 292.0
offset_top = 318.0
offset_right = 1212.0
offset_bottom = 830.0
grow_vertical = 0
scale = Vector2(0.11, 0.11)
theme_override_styles/focus = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_e2vqv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e2vqv")
icon = ExtResource("7_u3jb2")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = 41.0
offset_right = 167.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3pqgu")
text = "Start"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.0
offset_top = 174.0
offset_right = 169.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3pqgu")
text = "QUIT"

[node name="TitleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_648rk")
volume_db = -8.474

[node name="info_menu_panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -317.5
offset_top = -317.5
offset_right = 312.5
offset_bottom = 312.5
theme_override_styles/panel = SubResource("StyleBoxLine_yi83n")

[node name="info_menu" type="ColorRect" parent="info_menu_panel"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="info_text" type="RichTextLabel" parent="info_menu_panel"]
layout_mode = 2
theme = SubResource("Theme_1je8c")
bbcode_enabled = true
text = "[center]Info[/center]"

[node name="info_body" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = -270.0
offset_top = -253.0
offset_right = 304.0
offset_bottom = 140.0
theme = SubResource("Theme_pljgd")
bbcode_enabled = true
text = "
Gamemodes:
[color=#9835ef]Base[/color] - One ball, no powerups
[color=#9835ef]Endurance[/color] - Multi-ball, full powerups
[color=#9835ef]\"Nux Mode\"[/color] - For Prof. Nux! One ball, full powerups

             Immunity               slow balls





"
scroll_active = false

[node name="info_body2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -271.0
offset_top = 75.0
offset_right = 293.0
offset_bottom = 282.0
theme = SubResource("Theme_pljgd")
bbcode_enabled = true
text = "


             Magnet                   x2 points





"
scroll_active = false

[node name="Immunity" type="AnimatedSprite2D" parent="."]
position = Vector2(-215, 95)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_agabk")
frame_progress = 0.544288

[node name="Magnet" type="AnimatedSprite2D" parent="."]
position = Vector2(-215, 215)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_h0kk1")
frame_progress = 0.769193

[node name="SlowBalls" type="AnimatedSprite2D" parent="."]
position = Vector2(30, 95)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sbc4f")
frame_progress = 0.429884

[node name="x2Points" type="AnimatedSprite2D" parent="."]
position = Vector2(30, 215)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cyn88")
frame_progress = 0.126118

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="info_button" to="." method="_on_info_button_mouse_entered"]
[connection signal="mouse_exited" from="info_button" to="." method="_on_info_button_mouse_exited"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
